小程序类型 查询订单

--- a/app/scripts/views/directive/hjm/hjm-form-err-block.html
+++ b/app/scripts/views/directive/hjm/hjm-form-err-block.html
@@ -13,7 +13,7 @@
                     <span class="col-sm-3">提交字段名(name)</span>
                     <span class="col-sm-3">详情</span>
                     <div class="col-sm-2">
-                        <a class="btn btn-xs btn-primary btn-rounded" ng-click="mock_dev=!mock_dev">展示详细信息</a>
+                        <a class="btn btn-xs btn-warning btn-rounded" ng-click="mock_dev=!mock_dev">展示详细信息</a>
                     </div>
                 </div>
             </li>
