视频组视频数量video_count交给api处理

--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -62,13 +62,13 @@
                              placeholder="视频来源-高清版"></div>
 
 
-                        <!--<div class="form-group">-->
-                            <!--<div class="col-sm-offset-2">-->
-                                <!--<a class="btn btn-primary btn-rounded" ng-click="getDuration()">获取时长</a>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                        <!--<div form-input text="视频时长" ng-model="param.video_seconds" placeholder="视频时长:秒"-->
-                             <!--required="true"></div>-->
+                        <div class="form-group">
+                            <div class="col-sm-offset-2">
+                                <a class="btn btn-primary btn-rounded" ng-click="getDuration()">获取时长</a>
+                            </div>
+                        </div>
+                        <div form-input text="视频时长" ng-model="param.video_seconds" placeholder="视频时长:秒"
+                             required="true"></div>
 
                         <div form-input text="视频宽度" ng-model="param.record.video_width" placeholder="视频宽度"
                              required="true"></div>
