--- a/app/scripts/views/biz/live_rooms/point.html
+++ b/app/scripts/views/biz/live_rooms/point.html
@@ -4,7 +4,8 @@
          minlength="1"
          placeholder="最多15个字"></div>
     <div form-textarea text="基本信息" ng-model="item.content" name="{{'看点第'+($index+1)+'个基本信息项'}}" required="true"></div>
-    <div form-image text="图片" ng-model="item.pics" name="{{'看点第'+($index+1)+'个图片项'}}"  hide-bar="[0,0,1,1]" max="8" min="1"></div>
+    <div form-image text="图片" ng-model="item.pics" name="{{'看点第'+($index+1)+'个图片项'}}" hide-bar="[0,0,1,1]" max="8"
+         min="1" required="true"></div>
     <!--<p>-->
     <!--<span ng-bind="item|json"></span>-->
     <!--</p>-->
