--- a/app/scripts/views/biz/coupon/update.html
+++ b/app/scripts/views/biz/coupon/update.html
@@ -19,7 +19,7 @@
                         <!--source-api=""></div>-->
 
                         <!--<div form-radio text="活动品类" ng-model="param.sku" required="true" default="0"-->
-                             <!--source="[{text:'不限',value:'0'}]" source-api=""></div>-->
+                        <!--source="[{text:'不限',value:'0'}]" source-api=""></div>-->
 
                         <div form-radio text="商品类型(频率)" ng-model="param.frequency_type" required="true" default="1"
                              source="[{text:'单次',value:'1'},{text:'包月',value:'2'},{text:'不限',value:'0'}]"
@@ -30,7 +30,8 @@
 
                         <div form-input text="减(金额)" ng-model="param.price" required="true" type="number" min="0"></div>
 
-                        <div form-textarea text="手机号" ng-model="param.mobile_list" required="true"></div>
+                        <div form-textarea text="手机号" ng-model="param.mobile_list" required="true"
+                             placeholder="手机号码限制最多50个,英文逗号隔开"></div>
 
                         <div form-date-time text="上线时间" ng-model="param.start_time" required="true"></div>
 
