--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -83,6 +83,9 @@
                         <div form-input text="排序" ng-model="param.order_by" placeholder="排序" type="number" min="0"
                              required="true"></div>
                         <!--<div form-rich-text text="看点" ng-model="param.watch_point" placeholder="看点"></div>-->
+                        <div form-radio text="看点图片比例" type="radio" ng-model="param.point_pic_scale_type"
+                             default="1" source-api=""
+                             source="[{text:'16:9',value:'1'},{text:'4:3',value:'2'},{text:'3:4',value:'3'}]"></div>
                         <div live-point text="看点" ng-model="param.points"></div>
                     </div>
                 </div>
