更新一些小问题

--- a/app/scripts/views/live/videogroups/update.html
+++ b/app/scripts/views/live/videogroups/update.html
@@ -17,7 +17,8 @@
                         <div form-date-time text="首播时间" ng-model="param.first_time"></div>
                         <div form-input text="总集数" ng-model="param.course_num" type="number" placeholder=""
                              required="true" min="0"></div>
-                        <div form-input text="预告片" ng-model="param.pre_video_url" placeholder="预告片视频地址"></div>
+                        <div form-input text="预告片" ng-model="param.pre_video_url"
+                             placeholder="请将视频上传到阿里云，并填写mp4格式。不接受其他格式！"></div>
 
 
                         <div form-image-single text="图片" ng-model="param.pic_url" required="true"></div>
