更新APK不改变名称了

--- a/app/scripts/views/biz/support/upgradesAdd.html
+++ b/app/scripts/views/biz/support/upgradesAdd.html
@@ -8,7 +8,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <div class="form-group">
-                            <h1 class="text-danger col-sm-offset-2">直播APP版本更新</h1>
+                            <h1 class="text-danger col-sm-offset-2">新上传APK文件不能跟历史上传的文件名称相同</h1>
                         </div>
                         <div class="form-group">
                             <div form-apk text="Apk安装包" ng-model="param.update_url" required="true"></div>
