--- a/app/scripts/views/biz/support/appshareconfig.html
+++ b/app/scripts/views/biz/support/appshareconfig.html
@@ -14,7 +14,7 @@
                             <div form-radio ng-model="param.appshare_channel" text="类型"  default="1" required="true"
                                  source="[{text:'微信好友',value:'1'},{text:'朋友圈',value:'2'},{text:'全部',value:'3'}]"></div>
                             <div form-input ng-model="param.appshare_title" text="分享标题" required="true"></div>
-                            <div form-input ng-model="param.appshare_content" text="分享内容" required="true"></div>
+                            <div form-textarea ng-model="param.appshare_content" text="分享内容" required="true"></div>
                             <div form-image-single ng-model="param.appshare_pic" text="分享图片" required="true"></div>
                         </div>
                     </div>
