--- a/app/scripts/views/live/videogroups/update.html
+++ b/app/scripts/views/live/videogroups/update.html
@@ -114,7 +114,7 @@
                             <div form-input text="指定购买活动链接" ng-model="param.product_url" placeholder="活动购买URL"
                                  required="true" ng-disabled="true"></div>
 
-                            <div form-date-time text="观看权限发放开始时间" ng-model="param.open_time" required="true"></div>
+                            <!--<div form-date-time text="观看权限发放开始时间" ng-model="param.open_time" required="true"></div>-->
                             <!--<h3 class="col-sm-offset-2 text-primary">只能管理员来操作开启自动处理开关</h3>-->
                             <!--ng-disabled="$root.hjm.role!=='admin'"-->
                             <div form-radio text="自动处理开关" ng-model="param.onoff" required="true" default="1"
