回答管理 class bugfix

--- a/app/scripts/views/live/answers/answers.html
+++ b/app/scripts/views/live/answers/answers.html
@@ -106,7 +106,7 @@
                                         <td class="text-center"><span ng-bind="item.created_at"></span></td>
                                         <td class="text-center">
                                             <span ng-bind="item.status|keyVal:'1':'已公开':'2':'已隐藏':'3':'未知状态'"
-                                                  ng-class="{'text-default':item.status==1,'text-success':item.status==2,'text-danger':item.status==3}"></span>
+                                                  ng-class="{'text-success':item.status==1,'text-danger':item.status==2,'text-default':item.status==3}"></span>
                                         </td>
                                         <td class="text-center">
                                             <label class="checkbox-inline checkbox1">
