--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -21,8 +21,8 @@
             <form class="form-horizontal" name="FormBody" novalidate
                   ng-init="title_info = [1,1,1,1,1,1,1,1,1,1,1,1,1,1]"
                   disabled-role="{{param.product_id  || !copy?'admin,op':''}}">
-                <div form-radio text="课程类型" ng-model="param.course_type" default="1"
-                     source="[{text:'公众号课程',value:'1'},{text:'小程序课程',value:'2'}]"></div>
+                <!--<div form-radio text="课程类型" ng-model="param.course_type" default="1"-->
+                     <!--source="[{text:'公众号课程',value:'1'},{text:'小程序课程',value:'2'}]"></div>-->
                 <div class="panel panel-primary">
                     <div class="panel-body" ng-click="title_info[0] = title_info[0]+1; ">
                         <h5 style="margin: 0; padding: 10px 0;">活动信息
@@ -80,18 +80,18 @@
                         <div form-checkbox text="覆盖城市" ng-model="param.visible_cities" default="['上海市']"
                              source="[{text:'上海市',value:'上海市'},{text:'南京市',value:'南京市'},
                              {text:'厦门市',value:'厦门市'},{text:'北京市',value:'北京市'}]" source-api=""
-                             ng-disabled="param.course_type==2"></div>
+                             ></div>
 
                         <div form-input text="活动简介" ng-model="param.brief" placeholder="不超过50个字" minlength="1"
                              maxlength="50"></div>
 
                         <div form-textarea text="搜索关键字" ng-model="param.act_tags" placeholder="不超过100个字"
-                             minlength="0" maxlength="100" ng-show="param.course_type==1"></div>
+                             minlength="0" maxlength="100"></div>
 
                         <div form-input text="活动益处" ng-model="param.act_benefit" placeholder="不超过20个字"
-                             minlength="1" maxlength="14" ng-show="param.course_type==1"></div>
+                             minlength="1" maxlength="14"></div>
                         <div form-input text="分享标题" ng-model="param.share_title" placeholder="不超过40个字" minlength="1"
-                             maxlength="40" ng-show="param.course_type==1"></div>
+                             maxlength="40"></div>
 
                         <div form-input text="最小年龄" ng-model="param.act_min_age" type="number" min="0"></div>
                         <div form-input text="最大年龄" ng-model="param.act_max_age" type="number" min="0"></div>
@@ -102,7 +102,7 @@
                         <hr>
                         <div form-radio text="活动时间类型" type="radio" ng-model="param.act_time_type" required="true"
                              default="1" source="[{text:'每天连续',value:'1'},{text:'每周固定天数',value:'2'}]"
-                             source-api="" ng-disabled="param.course_type == 2"></div>
+                             source-api=""></div>
 
                         <div form-checkbox text="选择每周时间" ng-model="act_week" ng-show="param.act_time_type == 2"
                              source="$root.common.act_checkbox_week" source-api=""></div>
@@ -139,7 +139,7 @@
                         <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100"></div>
                     </div>
                 </div>
-                <div class="panel panel-primary" ng-show="param.course_type==1">
+                <div class="panel panel-primary">
                     <div class="panel-body">
                         <h5 style="margin: 0; padding: 10px 0;" ng-click="title_info[1] = title_info[1]+1; ">活动地址
                             <i class="animate-switch fa pull-right text-primary"
@@ -194,9 +194,9 @@
                              {'name': '排序', 'field': 'order_by',type:'number',min:'0',required:'true'}]"></div>
 
                         <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
-                             min="1" required="true" ng-disabled="param.course_type==2"></div>
+                             min="1" required="true" ></div>
                         <div form-input text="单人限购份数" ng-model="param.per_buy_count" type="number"
-                             min="0" placeholder="0 表示不限购" ng-disabled="param.course_type==2"></div>
+                             min="0" placeholder="0 表示不限购" ></div>
                         <div form-input text="初始购买份数" ng-model="param.init_buy_count" type="number"
                              min="1"></div>
 
@@ -205,9 +205,9 @@
 
                         <div form-radio text="是否限制仅会员可购买" ng-model="param.vip_buy" default="2"
                              source="[{text:'仅会员',value:'1'},{text:'不限制',value:'2'}]"
-                             required="true" ng-disabled="param.course_type==2"></div>
+                             required="true" ></div>
                         <div form-radio text="是否需填收货地址" ng-model="param.delivery_type" required="true"
-                             ng-disabled="$stateParams.product_id && !copy && delivery_type==3 || param.course_type==2"
+                             ng-disabled="$stateParams.product_id && !copy && delivery_type==3"
                              source="[{text:'需要',value:'1'},{text:'不需要',value:'3'}]"
                              default="3"></div>
                         <div form-input text="配送次数" ng-model="param.frequency_num" type="number" min="0"
@@ -217,7 +217,7 @@
                              source="[{text:'无需指定',value:'2'},{text:'周六／周一',value:'1'}]" source-api=""></div>
                         <div form-radio text="是否支持陌生人拼团" type="radio" ng-model="param.group_strange" required="true"
                              default="2" source="[{text:'是',value:'2'},{text:'否',value:'1'}]"
-                             ng-show="param.category!=3" source-api="" ng-disabled="param.course_type==2"></div>
+                             ng-show="param.category!=3" source-api="" ></div>
 
                         <!--<div form-input text="目标金额" ng-model="param.act_goal_price" required="true" min="0"-->
                         <!--max="options_goal_price" type="number"></div>-->
@@ -236,16 +236,15 @@
 
 
                         <div form-radio text="是否需填写Email" type="radio" ng-model="param.show_email" required="true"
-                             default="2" source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""
-                             ng-show="param.course_type==1"></div>
+                             default="2" source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
 
                         <div form-radio text="是否需要购买保险" ng-model="param.baby_insure" default="2"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]"
-                             required="true" ng-show="param.course_type==1"></div>
+                             required="true"></div>
 
                     </div>
                 </div>
-                <div class="panel panel-primary" ng-if="param.course_type==2">
+                <div class="panel panel-primary">
                     <div class="panel-body">
                         <h5 style="margin: 0; padding: 10px 0;" ng-click="title_info[3] = title_info[3]+1; ">优惠规则
                             <i class="animate-switch fa pull-right text-primary"
@@ -257,7 +256,7 @@
                              source="[{text:'可选',value:1},{text:'不可选',value:2}]" source-api=""></div>
                     </div>
                 </div>
-                <div class="panel panel-primary" ng-if="param.course_type==1">
+                <div class="panel panel-primary">
                     <div class="panel-body">
                         <h5 style="margin: 0; padding: 10px 0;" ng-click="title_info[3] = title_info[3]+1; ">优惠规则
                             <i class="animate-switch fa pull-right text-primary"
@@ -267,7 +266,7 @@
                     <div class="panel-body" ng-show="title_info[3]%2==1">
                         <div form-radio text="会员、优惠券是否可同享" ng-model="param.coupon_share" required="true" default="1"
                              source="[{text:'同享',value:'1'},{text:'不可同享',value:'2'}]"
-                             ng-disabled="param.course_type==2"></div>
+                             ></div>
 
                         <div form-radio text="是否可选优惠券" ng-model="param.act_coupon" required="true" default="1"
                              source="[{text:'可选',value:1},{text:'不可选',value:2}]" source-api=""></div>
@@ -275,11 +274,11 @@
                         <div form-radio text="年卡优惠券类型" ng-model="param.coupon_category" required="true" default="1"
                              source="[{text:'不可用年卡',value:'1'},{text:'年卡通用券',value:'2'},
                              {text:'定向券100',value:'3'},{text:'定向券500',value:'4'}]" ng-show="param.act_coupon==1"
-                             ng-disabled="param.course_type==2"></div>
+                             ></div>
 
                         <div form-radio text="会员购买优惠" ng-model="param.vip_promotion_type" required="true" default="1"
                              source="[{text:'打折',value:'1'},{text:'无优惠',value:'3'}]"
-                             ng-disabled="param.course_type==2"></div>
+                             ></div>
 
 
                         <div class="form-group"
@@ -377,7 +376,7 @@
                     <div class="panel-body" ng-show="title_info[6]%2==1">
                         <div form-radio text="是否可买礼包" ng-model="param.gift_buy" default="1" required="true"
                              source="[{text:'是',value:1},{text:'否',value:2}]" source-api=""
-                             ng-disabled="param.course_type==2"></div>
+                             ></div>
 
                         <div form-input text="礼包名称" ng-model="param.gift_name" placeholder="不超过30个字" required="true"
                              ng-if="param.gift_buy==1" minlength="0" maxlength="30"></div>
@@ -482,19 +481,18 @@
                     <div class="panel-body" ng-show="title_info[7]%2==1">
                         <div form-radio text="显示在商城" ng-model="param.visible" required="true" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
-                        <div form-radio text="显示在首页" ng-model="param.show_in_index" required="true" default="1"
+                        <div form-radio text="显示在H5首页" ng-model="param.show_in_index" required="true" type="number" default="2"
+                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
+                        <div form-radio text="显示在小程序首页" ng-model="param.show_mini_index" required="true" type="number" default="2"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
                         <div form-radio text="显示在日历" ng-model="param.show_in_calendar" default="1"
-                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"
-                             ng-disabled="param.course_type == 2"></div>
+                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"></div>
                         <div form-radio text="显示用户购买记录" ng-model="param.show_user_list" default="2"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"></div>
                         <div form-radio text="绑定手机号" ng-model="param.enable_bind_mobile" default="1"
-                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"
-                             ng-disabled="param.course_type == 2"></div>
+                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"></div>
                         <div form-radio text="是否推荐该活动" ng-model="param.act_recommend" default="2"
-                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"
-                             ng-disabled="param.course_type == 2"></div>
+                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"></div>
                         <div form-input text="排序" ng-model="param.order_by" type="number" min="0"></div>
                         <div form-textarea text="管理备注" ng-model="param.admin_remark"></div>
                     </div>
