--- a/app/scripts/views/container/login.html
+++ b/app/scripts/views/container/login.html
@@ -1,8 +1,8 @@
 <div class="login-page">
     <div class="row">
         <div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
-            <img src="styles/images/flat-avatar.png" class="user-avatar">
-            <h2>Ahaschool芝麻学社 管理系统</h2>
+            <img src="styles/images/logo/logo.png" class="user-avatar">
+            <h2>ahaschool 后台管理系统</h2>
             <form role="form" ng-keypress="login_keypress($event);">
                 <div class="form-content">
                     <div class="form-group">
