优化了grunt合并代码后main.min.js大小

--- a/app/scripts/views/live/appmessages/send.html
+++ b/app/scripts/views/live/appmessages/send.html
@@ -8,6 +8,7 @@
         <div class="panel-body">
           <div form-input text="标题" ng-model="param.title" required="true" placeholder=""></div>
           <div form-textarea text="描述" ng-model="param.description" required="true" placeholder=""></div>
+          <div form-textarea text="body" ng-model="param.body" required="true" placeholder=""></div>
           <div form-input text="跳转" ng-model="param.url" required="true" placeholder=""></div>
         </div>
       </div>
