背景图片必填

--- a/app/scripts/views/biz/support/appshareconfig.html
+++ b/app/scripts/views/biz/support/appshareconfig.html
@@ -16,6 +16,7 @@
                             <div form-input ng-model="param.appshare_title" text="分享标题" required="true"></div>
                             <div form-textarea ng-model="param.appshare_content" text="分享内容" required="true"></div>
                             <div form-image-single ng-model="param.appshare_pic" text="分享图片" required="true"></div>
+                            <div form-image-single ng-model="param.appshare_bg" text="背景图片" required="true"></div>
                         </div>
                     </div>
                 </div>
