--- a/app/scripts/views/live/appmessages/send.html
+++ b/app/scripts/views/live/appmessages/send.html
@@ -6,8 +6,8 @@
     <form class="form-horizontal" name="FormBody" novalidate>
       <div class="panel panel-primary">
         <div class="panel-body">
-          <div form-input text="标题" ng-model="param.title" required="true" placeholder=""></div>
-          <div form-textarea text="描述" ng-model="param.description" required="true" placeholder=""></div>
+          <div form-input text="标题" ng-model="param.title" required="true" placeholder="不超过40个字" maxlength="40"></div>
+          <div form-textarea text="描述" ng-model="param.description" required="true" placeholder="不超过120个字" min="0" max="120"></div>
           <!--<div form-textarea text="body" ng-model="param.body" required="true" placeholder=""></div>-->
           <div form-input text="跳转" ng-model="param.url" required="true" placeholder=""></div>
         </div>
