--- a/app/scripts/views/biz/exchanges/update.html
+++ b/app/scripts/views/biz/exchanges/update.html
@@ -10,9 +10,12 @@
           <div class="panel-body">
             <h4>生成兑换码</h4>
             <div form-input text="渠道名" ng-model="param.channel_name" placeholder="渠道名" required="true"></div>
-            <div form-input text="视频组ID" ng-model="param.video_group_id" placeholder="视频组ID" type="number"
+            <!--<div form-input text="视频组ID" ng-model="param.video_group_id" placeholder="视频组ID" type="number"-->
+            <!--required="true"></div>-->
+            <div form-textarea text="视频组ID" ng-model="param.video_group_id" placeholder="多个视频组ID,用逗号隔开"
                  required="true"></div>
-            <div form-input text="生成数量" ng-model="param.number" placeholder="请输入生成数量" type="number" required="true" min="1" max="50000"></div>
+            <div form-input text="生成数量" ng-model="param.number" placeholder="请输入生成数量" type="number" required="true"
+                 min="1" max="50000"></div>
           </div>
         </div>
         <div form-error-block></div>
