--- a/app/scripts/views/directive/show_str.html
+++ b/app/scripts/views/directive/show_str.html
@@ -1,16 +1,16 @@
 <div>
-    <a class="btn btn-info" ng-click="show();" ng-if="str" ng-bind="btn_str|limitTo:'4'">查看内容</a>
+    <a class="btn btn-info btn-rounded" ng-click="show();" ng-if="str" ng-bind="btn_str|limitTo:'4'">查看内容</a>
     <script type="text/ng-template" id="show_str_tmp.html">
         <div class="modal-header">
             <h3 class="modal-title" ng-bind="title"></h3>
         </div>
-        <div class="modal-body">
-            <ul class="list-inline">
-                <li ng-repeat="item in str" ng-bind="item+','" class="wrap width_100"></li>
+        <div class="modal-body bs-callout bs-callout-info">
+            <ul class="list-group">
+                <li ng-repeat="item in str" ng-bind="item+';'" class="wrap width_100 list-group-item"></li>
             </ul>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-warning" ng-click="cancel()">关闭</button>
+            <button class="btn btn-warning btn-rounded" ng-click="cancel()">关闭</button>
         </div>
     </script>
 </div>
