视频组的定时生效功能

--- a/app/scripts/views/live/videogroups/room.html
+++ b/app/scripts/views/live/videogroups/room.html
@@ -26,8 +26,8 @@
       <a class="btn btn-primary btn-bordered btn-xs"
          ng-click="ngModel.splice($index, 0, {type: 1, title: ''})">向上新增章节</a>
     </div>
-    <!--<div form-radio text="类型" ng-model="item.online_status" default="1" name="online_status"-->
-         <!--source="[{text:'立即生效',value:'1'},{text:'定时生效',value:'2'}]"></div>-->
-    <!--<div form-date-time text="设置时间" ng-model="item.online_time" ng-show="item.online_status==2"></div>-->
+    <div form-radio text="类型" ng-model="item.online_status" default="1" name="online_status"
+         source="[{text:'立即生效',value:'1'},{text:'定时生效',value:'2'}]"></div>
+    <div form-date-time text="设置时间" ng-model="item.online_time"></div>
   </div>
 </div>
