--- a/app/scripts/views/directive/common_form.html
+++ b/app/scripts/views/directive/common_form.html
@@ -18,8 +18,11 @@
                             <span class="form_label_dangus" ng-bind="(item.allownull|| item.isprimary)?'':'*'"></span>
                         </label>
                         <div class="col-sm-6">
-                            <input class="form-control" ng-model="item.val" ng-disabled="item.isprimary==1">
-                            <!--<div ng-bind-html="item.fieldDirective|to_trusted " ng-show="item.fieldDirective"></div>-->
+                            <input class="form-control" ng-model="item.val" ng-disabled="item.isprimary==1" ng-if="!item.type">
+                            <!--<div ng-bind-html="item.fieldDirective|to_trusted" ng-show="item.fieldDirective"></div>-->
+                            <select class="form-control" ng-model="item.val" ng-options="source.text as source.value for source in item.source" ng-if="item.type">
+                                <option value="">--  请选择  --</option>
+                            </select>
                         </div>
                     </div>
                 </form>
